# SnapOptimizer

./: .gitignore  MANIFEST.in  README.md  setup.cfg
SnapOptimizer/: encodings.py  paths.py  qubit_gates.py  snap_gate.py  visualize.py
SnapOptimizer/analysis/: fidelity.py
SnapOptimizer/cli/: snap_optimization.py
SnapOptimizer/defaults/: default_encoding.json
SnapOptimizer/optimization/: automation.py  snap_optimizer.py  snap_pulse_optimizer.py
