[metadata]
name = SnapOptimizer
version = 1.0.0
license = "GNU General Public License v3.0"
description = Optimize SNAP-Displacement sequences for control over 3D cavity
long_description = file: README.md
author = Simon Paulsson

[options]
packages = SnapOptimizer
include_package_data = True
install_requires = 
    jax==0.3.25
    jaxlib==0.3.25
    numpy
    matplotlib
    qutip
    tqdm
    qgrad @ git+https://github.com/qgrad/qgrad.git@524a894d215ea4d6308614a2b4877b9f0a748b41

[options.extras_require]
pulses = qctrl

[options.entry_points]
console_scripts = 
    snap = SnapOptimizer.cli.snap_optimization:main